fix positioning in hero section --- now uses correct way of alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -72,7 +72,6 @@ button {
   -webkit-animation: slide-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   animation: slide-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
-
 /**
  * ----------------------------------------
  * animation slide-right
@@ -196,27 +195,38 @@ button {
 .bred-main {
   //image should be changed due to export error for the lightbulb wire
   .bred-lightbulb-wrapper {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     .bred-lightbulb {
       width: 40%;
-      position: relative;
-      bottom: -2em;
-      left: 8em;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 38em;
+      margin: auto;
       z-index: 2;
-      display: grid;
-      place-content: center;
     }
     .bred-clouds {
-      position: relative;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
       z-index: 3;
-      bottom: 8em;
-      left: 1em;
     }
     .bred-stars {
-      position: relative;
-      z-index: 4;
-      bottom: 35em;
-      left: 2em;
-      opacity: 0.5;
+      // position: absolute;
+      // top: 0;
+      // left: 0;
+      // right: 0;
+      // bottom: 0;
+      // z-index: 4;
+      // opacity: 0.5;
     }
   }
 
@@ -224,9 +234,10 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     z-index: 5;
     position: relative;
-    bottom: 39em;
+    bottom: 7em;
 
     h2 {
       color: var(--bred-yellow);
